--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
+<!DOCTYPE html>
+<html lang="tr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Özge'ye Özel Bir Soru 💖</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
 
+    <div class="container">
+        <div class="confetti-container"></div>
+
+        <div class="content-box">
+            <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExM2FqenR0cjV0bzJjczB6NnFtaWZkM2NweWdwMXRpeDNscHBtdGZnZyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/LpDmM2AGxeBwY/giphy.gif" alt="Aşk" class="love-gif">
+            
+            <h1>Özge,</h1>
+            <h2 id="question">Bana artık "aşkım" der misin?</h2>
+            
+            <div class="buttons">
+                <button id="yesButton">EVET! 😍</button>
+                <button id="noButton">Hayır 😒</button>
+            </div>
+        </div>
+    </div>
+
+    <footer>
+        Designed by Kyrosil Software Team
+    </footer>
+
+    <script src="script.js"></script>
+</body>
+</html>
