--- a/index.html
+++ b/index.html
@@ -9,23 +9,21 @@
 <body>
 
     <div class="container">
-        <div class="confetti-container"></div>
-
-        <div class="content-box">
-            <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExM2FqenR0cjV0bzJjczB6NnFtaWZkM2NweWdwMXRpeDNscHBtdGZnZyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/LpDmM2AGxeBwY/giphy.gif" alt="Aşk" class="love-gif">
+        <div class="confetti-container"></div> <div class="content-box">
+            <img id="mainGif" src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExM3FpOWE0MHJ6b20yd2V2N3Nuc2Y4eG9rMjE0ZzdxOWMzbXZkMWY2MyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/Vz9T9lO7iG0lq/giphy.gif" alt="Sevimli Aşk" class="love-gif">
             
-            <h1>Özge,</h1>
-            <h2 id="question">Bana artık "aşkım" der misin?</h2>
+            <h1>Sevgili Özge,</h1>
+            <h2 id="question">Kalbimin tek sahibi, bana artık "aşkım" der misin? 🥰</h2>
             
-            <div class="buttons">
-                <button id="yesButton">EVET! 😍</button>
-                <button id="noButton">Hayır 😒</button>
+            <div class="buttons-wrapper">
+                <button id="yesButton">Evet! Sonsuza Dek! ✨</button>
+                <button id="noButton" class="no-button-hidden">Hayır (Mümkün Değil!)</button>
             </div>
         </div>
     </div>
 
     <footer>
-        Designed by Kyrosil Software Team
+        Designed with 💖 by Kyrosil Software Team
     </footer>
 
     <script src="script.js"></script>
