--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
 <body>
 
     <div class="container">
-        <div class="confetti-container"></div> <div class="content-box">
+        <div class="confetti-container"></div> 
+        <div class="heart-container"></div> <div class="content-box" id="mainContentBox">
             <img id="mainGif" src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExM3FpOWE0MHJ6b20yd2V2N3Nuc2Y4eG9rMjE0ZzdxOWMzbXZkMWY2MyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/Vz9T9lO7iG0lq/giphy.gif" alt="Sevimli Aşk" class="love-gif">
             
-            <h1>Sevgili Özge,</h1>
+            <h1>Sevgili Özge'm,</h1>
             <h2 id="question">Kalbimin tek sahibi, bana artık "aşkım" der misin? 🥰</h2>
             
             <div class="buttons-wrapper">
-                <button id="yesButton">Evet! Sonsuza Dek! ✨</button>
-                <button id="noButton" class="no-button-hidden">Hayır (Mümkün Değil!)</button>
+                <button id="yesButton">EVET! Sonsuza Dek! ✨</button>
+                <button id="noButton" class="hidden">Hayır (Diyemezsin!)</button>
             </div>
         </div>
     </div>
